<resources>
    <string name="app_name">HealthCare</string>
    <string name="dog1">Respect Training For Puppies and Adult Dogs</string>
    <string name="text1">French Bulldog Temperament: What\'s Good About \'Em, What\'s Bad About \'Em</string>
    <string name="text2">Despite his glum expression, the French Bulldog is comical, entertaining, and dependably amiable.\n\nAs comfortable in an apartment as he is on a farm, he is more lively than you might suspect from his chunky appearance. French Bulldog puppies are especially frisky, and ball chasing is one of their passions. Adults are more dignified and can be champion couch potatoes, but also love to clown around and go for walks in cool weather.\n\nMany Frenchies are friendly with everyone, while others are politely reserved. French Bulldogs will bark to announce visitors, but are otherwise quiet dogs.\n\nUsually peaceful with other pets (though some French Bulldogs will hunt small rodents), males may bicker with other males.\n\nThe French Bulldog is quite stubborn and can be challenging to train, yet also surprisingly sensitive, remembers what he learns, and responds well to early, patient, persistent training that utilizes food motivation.\n\nSnorting, snuffling, and flatulence go with the territory of short-faced breeds.\n\nSwimming pool owners must exercise caution: Because of his squat build and heavy head, most Frenchies cannot swim and will drown if they fall into a pool.</string>
    <string name="text3">If you want a dog who…</string>
    <string name="text4">Is smallish but very sturdy — not a delicate lapdog\n\nHas large expressive eyes\n\nHas a sleek easy-care coat that comes in many colors\n\nIs usually polite with everyone, including other pets\n\nTypically loves to play games and chase balls\n\nDoesn\'t need much exercise\n\nDoesn\'t bark much</string>
    <string name="text5">A French Bulldog may be right for you.</string>
    <string name="text6">If you don\'t want to deal with…</string>
    <string name="text7">Snorting, snuffling, wheezing, snoring, some slobbering\n\nGassiness (flatulence)\n\nStubbornness\n\nSlowness to housebreak\n\nQuite a few potential health problems due to his deformed face\n\nHigh cost</string>
    <string name="text8">A French Bulldog may not be right for you.</string>
    <string name="dog">dog</string>
    <string name="text9">Keep in mind that the inheritance of <b>temperament</b> is less predictable than the inheritance of <b>physical</b> traits such as size or shedding. Temperament and behavior are also shaped by raising and training.</string>
    <string name="text10">You can avoid some negative traits by choosing an ADULT dog from an animal shelter or rescue group. With an adult dog, you can easily see what you\'re getting, and plenty of adult French Bulldogs have already proven themselves not to have negative characteristics.\n\nIf you want a puppy, you can avoid some negative traits by choosing the right breeder and the right puppy. Unfortunately, you usually can\'t tell whether a puppy has inherited temperament or health problems until he grows up.</string>
    <string name="text11">More traits and characteristics of the French Bulldog</string>
    <string name="text12">If I was considering a French Bulldog, I would be most concerned about…\n\n1. <b>Health problems.</b> Unfortunately, these nice-tempered dogs are deliberately bred with structural deformities that detract from the dog\'s quality of life. They especially have trouble breathing. You need to protect them from heatstroke and if your summers get hot, your home needs to be air-conditioned. Along with respiratory disorders, Frenchies also suffer from spinal disorders, eye diseases, heart disease, and joint diseases. Read more about French Bulldog Health.\n\n2. <b>French Bulldog sounds.</b> Because of their short face, most Frenchies snort, snuffle, wheeze, grunt, and snore loudly. These sounds are endearing to some people; nerve-wracking to others.\n\n3. <b>Slobbering.</b> Some French Bulldogs, especially those with heavy loose lips, slobber water when they drink. Some drool, too, especially after eating and drinking.\n\n4. <b>Gassiness (flatulence).</b> All short-faced breeds gulp air when they eat, and that air has to go somewhere, after all!\n\n5. <b>Stubbornness.</b> For such a small dog, French Bulldogs can be quite stubborn and manipulative. You must show them, through absolute consistency, that you mean what you say. Food is a great motivator for this breed, but it often results in a fat Frenchie who only obeys if you\'re waving a cookie. I recommend a more sensible training method.\n\n6. <b>Housebreaking.</b> French Bulldogs can be quite slow to housebreak. Expect four to six months of consistent crate training.</string>
    <string name="save_touch">To Save\nTouch Here</string>
    <string name="te1">Training French Bulldogs</string>
    <string name="text13">Dog Training – What Works, And What Doesn\'t</string>
    <string name="t18">Meet Kathy Armstrong and Jake</string>
    <string name="t15">Frustrated dog owners often call or email me when their dog has behavior problems and needs training. Here is \"Kathy\" calling about \"Jake\".</string>
    <string name="t16">I often get phone calls from distressed owners who are having trouble with their dog.
\n\nLet\'s listen in on a phone conversation between myself and a typical dog owner.... let\'s call her Kathy Armstrong.
\n\n<b>Kathy</b>: \"Michele, my dog Jake is being difficult! I can\'t make him do anything. He only listens to me when he\'s in the mood.\"
\n\n<b>Me</b>: \"I see. Would you say Jake is behaving rudely?\"
\n\n<b>Kathy</b>: (surprised): \"What do you mean? How can a dog be rude?\"</string>
    <string name="favorite">favorite</string>
    <string name="a21">Solving Dog Behavior Problems</string>
    <string name="a22">All puppies (and adult dogs, too) do some things you would rather they not do!</string>
    <string name="a23">So you\'re reading this page because your dog is doing something you don\'t like – some behavior you want him to do differently – or simply <b>stop</b> doing.
\n\n- Housebreaking \"accidents"\n\n- Barks too much
\n- Won\'t let go of things
\n- Steals food when you turn your back
\n- Jumps on people
\n- Chews on your hands
\n- Constantly seeks attention
\n- Guards his food or toys
\n- Pulls on the leash
\n- Aggressive toward people or other dogs
\n- Struggles when you try to restrain him
\n- Chases the cat
\n- Chews on the furniture or your belongings
\n- Did I mention housebreaking \"accidents\"?</string>
    <string name="a24">The \"magic word\" for virtually all dog behavior problems is \"No.\" But what you do AFTER you say \"No\" is the true solution for stopping dog behavior problems. Do you know what to do next?</string>
    <string name="a25">\"How can I stop my dog from....?\"</string>
    <string name="a26">One of the most common questions dog owners ask me is: \"How can I stop my dog from (doing some <b>specific</b> behavior problem)?\"
smiley face\nThey\'re hoping I\'ll tell them where to find a secret button on the back of their dog\'s head that will trigger a <b>misbehavior-OFF switch</b>.
Alas, my answer is almost always the same, no matter what the misbehavior is. Here it is (free of charge):</string>
    <string name="a27">You need to tell your dog, \"No. Stop that.\"</string>
    <string name="a28">Does that sound too simplistic? It probably does, because most owners respond in a frustrated voice, \"But I already tell my dog No! He still doesn\'t listen!\"
Fair enough. Here is what is going on. Either he really doesn\'t understand what No means (this is the truth in MANY cases), or else he understands it but doesn\'t see any reason why he should obey it.</string>
    <string name="a29">There are two key points here, you see…your dog must <b>understand</b> the word (I can show you how to teach words properly) and then he must <b>respect</b> you enough to obey it.
\nBecause without respect, your dog may UNDERSTAND what you say, but he doesn\'t see any reason why he should DO what you say. (Unless you\'re bribing him with a cookie, which only works sometimes – usually NOT when you need it most.</string>
    <string name="a30">Getting your dog to respect you means interacting with him in specific ways that encourage respect.</string>
    <string name="a31">No matter how large or how small, all dogs need to respect their owners. I teach my small dogs to respect me in the exact same ways I taught my German Shepherds.</string>
    <string name="a32">You might be thinking, \"But I already know how to interact with my dog. I care for him and I love him.... it\'s easy.\"
Actually, it isn\'t so easy, because canines see and interpret the world differently than we do.
Whenever you do <b>anything</b> with your dog, even just walking through the kitchen, or petting him, or speaking to him.... he is busy judging your tone of voice, your facial expression, your body language, how you\'re touching him, how you\'re responding when he does \"X\" or \"Y\".
All of these seemingly little things are very, very important to your dog. They\'re the clues he uses to draw conclusions about you and to decide whether you\'re worthy of respect or not.
\n\n- If you interact with your dog in certain ways that are WRONG for canines, he will conclude that even though he loves you, he doesn\'t need to obey you. And you will see behavior problems.
\n\n- If you interact with your dog in all the RIGHT ways, he will conclude that he not only loves you, but also that you\'re a capable leader worthy of respect. Then he will obey when you say, \"No. Stop that.\" (assuming, of course, that you have taught him what it means so that he understands)</string>
    <string name="a33">Respectful dogs don\'t misbehave.
It is as simple as that.</string>
    <string name="a34">Well, okay....ALMOST as simple as that. There are a few more things your dog needs in order to be well-behaved.</string>
    <string name="a35">Dogs need enough exercise and active play sessions to tire them out. Some dogs need only moderate exercise, while others need LOTS to make them feel content. You must meet the needs of your particular dog.</string>
    <string name="a36">Exercise, Activities, Companionship</string>
    <string name="a37">Even respectful dogs will misbehave if they don\'t get enough exercise, interesting activities to do, and daily companionship.
Dogs are sociable creatures.</string>
    <string name="a38">- If you leave your dog home alone for 8 hours, he will feel bored and frustrated.
\n\n- If you leave him outside for hours at a time, he will feel bored and frustrated.
\n\n- If you don\'t provide enough exercise and activities, he will feel bored and frustrated.</string>
    <string name="a39"><b>Boredom and frustration</b> are major causes of behavior problems in dogs.
Dogs vent boredom and frustration by destroying things.... digging holes.... rambunctiousness.... escaping.... barking...</string>
    <string name="a40">Those \"misbehaviors\" cannot be solved by training. Your dog has every right to vent his boredom and frustration when his needs of Exercise and Companionship are not being met.
You must meet those needs while ALSO teaching commands and a respectful attitude. That\'s how you raise a well-behaved dog.</string>
    <string name="a41">What you should do right now to prevent or stop behavior problems</string>
    <string name="a42">You need to learn the right ways to interact with your dog – and the wrong ways too, so you don\'t do those!
You need to know how to teach the Magic Word (\"No\") to your dog and how to respond if he doesn\'t obey it.
That\'s how you stop behavior problems. With that one word.... plus respect... plus however much exercise and companionship it takes to keep your dog satisfied.
Check out another article, I\'ve written on Respect Training.</string>
</resources>