<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                style="@style/GreenText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:gravity="center"
                android:text="@string/a21" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="0.8"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/favorite"
                    android:src="@drawable/ic_heart" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/save_touch" />
            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/problems_pup_boot"
            tools:ignore="ContentDescription" />

        <TextView
            style="@style/BlurText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a22" />

        <TextView
            style="@style/NormalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a23" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:src="@drawable/problems_bulldog" />

        <TextView
            style="@style/BlurText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a24" />

        <TextView
            style="@style/GreenText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a25" />

        <TextView
            style="@style/NormalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a26" />

        <TextView
            style="@style/RedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a27" />

        <TextView
            style="@style/NormalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a28" />

        <TextView
            style="@style/NormalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/yellow"
            android:padding="4dp"
            android:text="@string/a29" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:src="@drawable/problems_2dogs" />

        <TextView
            style="@style/BlurText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a31" />

        <TextView
            style="@style/RedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a30" />

        <TextView
            style="@style/NormalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a32" />

        <TextView
            style="@style/RedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a33" />

        <TextView
            style="@style/NormalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a34" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:src="@drawable/problems_exercise" />

        <TextView
            style="@style/BlurText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a35" />

        <TextView
            style="@style/GreenText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a36" />

        <TextView
            style="@style/NormalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a37" />

        <TextView
            style="@style/RedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a38" />

        <TextView
            style="@style/NormalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a39" />

        <TextView
            style="@style/NormalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/yellow"
            android:padding="4dp"
            android:text="@string/a40" />

        <TextView
            style="@style/GreenText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a41" />

        <TextView
            style="@style/NormalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a42" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp" />
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>