<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_image1"
            android:contentDescription="@string/dog"
            android:src="@drawable/frenchbulldogsf3" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_alignParentStart="true"
                android:gravity="center"
                style="@style/GreenText"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/img_favorite"
                android:text="@string/text1" />

            <ImageView
                android:id="@+id/img_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="18dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_heart"
                android:contentDescription="@string/favorite" />

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/img_favorite"
                android:gravity="center"
                android:text="@string/save_touch" />
        </RelativeLayout>


        <TextView
            style="@style/NormalText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text2" />

        <TextView
            style="@style/BlueText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text3" />

        <TextView
            style="@style/NormalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text4" />

        <TextView
            style="@style/RedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text5" />

        <TextView
            style="@style/BlueText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text6" />

        <TextView
            style="@style/NormalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text7" />

        <TextView
            style="@style/RedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text8" />

        <TextView
            style="@style/NormalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#FFFFCC"
            android:padding="5dp"
            android:text="@string/text9"
            android:textSize="18sp" />

        <TextView
            style="@style/NormalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text10" />

        <TextView
            style="@style/BlueText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text11" />

        <TextView
            style="@style/NormalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp" />
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>