<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/GreenText"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/text13" />

            <ImageView
                android:id="@+id/img_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="18dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_heart" />

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/img_favorite"
                android:gravity="center"
                android:text="@string/save_touch" />
        </RelativeLayout>

        <TextView
            style="@style/PurpleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t18" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/respect_kathy" />

        <TextView
            style="@style/BlurText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/t15" />

        <TextView
            style="@style/NormalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t16" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>